# pacific-tools

./: CLAUDE.md  README.md  pyproject.toml
onboard-user/: pyproject.toml
onboard-user/src/pacific_onboard_user/: __init__.py  conversation.py  tool.py
onboard-user/tests/unit/: test_onboard_user.py
schedule-meeting/: pyproject.toml
schedule-meeting/src/pacific_schedule_meeting/: __init__.py  tool.py
schedule-meeting/tests/unit/: test_schedule_meeting.py
service-atlassian/: pyproject.toml
service-atlassian/src/pacific_service_atlassian/: __init__.py  adapter.py
service-atlassian/tests/unit/: test_atlassian.py
service-google/: pyproject.toml
service-google/src/pacific_service_google/: __init__.py  adapter.py  calendar.py
service-google/tests/unit/: test_google.py
service-microsoft/: pyproject.toml
service-microsoft/src/pacific_service_microsoft/: __init__.py  adapter.py  calendar.py
service-microsoft/tests/unit/: test_microsoft.py
service-slack/: pyproject.toml
service-slack/src/pacific_service_slack/: __init__.py  adapter.py
service-slack/tests/unit/: test_slack.py
src/pacific_tools/: __init__.py
src/pacific_tools/onboard_user/: __init__.py  tool.py
tests/unit/: test_onboard_user.py
